# astronomy-cnn

./: README.md  pyproject.toml
astronomy_cnn/: model.py  train.py  utils.py
models/: model_weights.pth
runs/Mar26_13-35-51_xutvgpu1.svk.local/: events.out.tfevents.1742992551.xutvgpu1.svk.local.960717.0
runs/Mar26_14-02-23_xutvgpu1.svk.local/: events.out.tfevents.1742994143.xutvgpu1.svk.local.961279.0
runs/Mar26_14-05-16_xutvgpu1.svk.local/: events.out.tfevents.1742994316.xutvgpu1.svk.local.961844.0
runs/Mar26_14-07-11_xutvgpu1.svk.local/: events.out.tfevents.1742994431.xutvgpu1.svk.local.962653.0
runs/Mar26_14-08-47_xutvgpu1.svk.local/: events.out.tfevents.1742994527.xutvgpu1.svk.local.963131.0
runs/Mar26_14-10-33_xutvgpu1.svk.local/: events.out.tfevents.1742994633.xutvgpu1.svk.local.963793.0
runs/Mar26_14-13-20_xutvgpu1.svk.local/: events.out.tfevents.1742994800.xutvgpu1.svk.local.964169.0
runs/Mar26_14-14-37_xutvgpu1.svk.local/: events.out.tfevents.1742994877.xutvgpu1.svk.local.964513.0
runs/Mar26_14-18-05_xutvgpu1.svk.local/: events.out.tfevents.1742995085.xutvgpu1.svk.local.965045.0
runs/Mar26_14-18-31_xutvgpu1.svk.local/: events.out.tfevents.1742995111.xutvgpu1.svk.local.965242.0
runs/Mar26_14-21-20_xutvgpu1.svk.local/: events.out.tfevents.1742995280.xutvgpu1.svk.local.965692.0
runs/Mar26_14-25-53_xutvgpu1.svk.local/: events.out.tfevents.1742995553.xutvgpu1.svk.local.966141.0
runs/Mar26_14-27-32_xutvgpu1.svk.local/: events.out.tfevents.1742995652.xutvgpu1.svk.local.966656.0
(+23 files in other folders)
